--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     padding: 0; 
  } 
  
- body {
+ #capa {
  background-image: url(imagens/imagem1.png);
  background-repeat: no-repeat; 
  background-size: cover;
